# shadowtrace-

./: .env.example  .gitignore  Makefile  README.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  evidence_agent.py  graph_builder.py  planner_agent.py  response_agent.py  triage_agent.py
backend/app/core/: config.py  errors.py  socketio_manager.py
backend/app/mock_xdr/: api.py  state.py
backend/app/models/: context.py
backend/app/orchestration/: __init__.py  workflow_graph.py
backend/app/services/: agent_trace_service.py  analysis_only_pipeline.py  approval_engine.py  context_service.py  event_service.py  evidence_projection.py  output_quality_evaluator.py  playbook_kb_service.py  working_memory.py
backend/migrations/versions/: 0007_graph_tables.py
backend/scripts/: load_attack_kb.py  load_playbook_kb.py
backend/tests/integration/: test_e2e_basic_loop.py  test_mock_tool_redis.py  test_rag_integration.py
backend/tests/test_agents/: test_evidence_agent.py  test_planner_agent.py  test_response_agent.py  test_triage_agent.py
backend/tests/test_api/: test_authz.py  test_contracts.py  test_events_api.py
backend/tests/test_core/: test_errors.py
backend/tests/test_db/: test_migrations.py
backend/tests/test_infra/: test_health.py
backend/tests/test_mock_xdr/: test_dispositions.py  test_types_and_auth.py
backend/tests/test_orchestration/: test_planner_node.py  test_react_engine.py
backend/tests/test_services/: test_agent_trace.py  test_approval_engine.py  test_event_service.py  (+2 more)
(+30 files in other folders)
